Fix overflow for pre tags

--- a/funnel/static/sass/_proposal.scss
+++ b/funnel/static/sass/_proposal.scss
@@ -264,6 +264,11 @@
   word-break: break-all;
 }
 
+.proposal-content pre,
+.codehilite pre {
+  white-space: pre-wrap;
+}
+
 .comment {
   margin: 1em 0;
 }
